# bilbo_H3

./: integrationDWH.ipynb  integrationDWH_partition_18_07.ipynb  pyproject.toml
Autres/: area_interpolate_2.ipynb  integrationDWH (1).ipynb  integrationDWH copy 3.ipynb  integrationDWH copy.ipynb
dbt/bilbo_dbt/: dbt_project.yml
dbt/bilbo_dbt/macros/: dtm.sql  fonctions.sql  indexes.sql  on_statement.sql  replace_item.sql  select_statement.sql  unnest.sql
dbt/bilbo_dbt/models/: schema.yml  test.sql
dbt/bilbo_dbt/models/dtm/: create_dtm.sql
dbt/bilbo_dbt/models/poc/: feux.sql  schema.yml
dbt/bilbo_dbt/models/tests/: join.sql  join2.sql
dbt/bilbo_dbt/models/unnest/: unnest_dtm.sql
plpgsql/: jointure_hierarchique.sql
python/: .env  integrationDWH copy 2.ipynb  integrationDWH.ipynb  integrationDWH_02_07 copy 2.ipynb  integrationDWH_02_07 copy.ipynb  integrationDWH_02_07.ipynb  integrationDWH_08_07 copy.ipynb  integrationDWH_08_07.ipynb  integrationDWH_partitionOk.ipynb  integrationDWH_partition_18_07.ipynb  suivi.txt  suivi1.txt  suivi_feux.txt
python/src/: h3_indexation.py
python/suivi_files/: suivi2.txt  suivi3.txt  suivi4.txt  suivi_mos.txt
